# contact-dynamics-testbed

./: .gitignore  CMakeLists.txt  EFpose  README.md  build-lcm.sh  build_lcm.sh  cl_driver.sh  dcl_driver.sh  driver.sh  example.py  ext_force  gitignore  joint_positions  joint_torques  joint_velocities  output  satellite_velocity  start_lcm.sh  tm_driver.sh
closed_loop/: README.md  controller.py  main_motor.py  motor_controller.py  motor_friction.py
double_closed_loop/: controller.py  gripper_control.cpp  main_gripper.py  motor_controller.py  motor_friction.py  satellite_velocity  torque_control.cpp
double_closed_loop/extra_stuff/: tm_gripper.cpp  tm_read_data.cpp  tm_vel_control.cpp  vel_control.cpp
double_closed_loop/motor_messages/: motor_state.lcm
double_closed_loop/robot_messages/: robot_command.lcm  robot_state.lcm
double_closed_loop/utils/: echo_robot_state.cpp  zero_torque.cpp
experiments/friction compensation/: README.md
experiments/test 2/: README.md  ext_force  joint_positions  joint_velocities
experiments/test 3/: EFpose  README.md  ext_force  joint_torques
experiments/test 4/: EFpose  ext_force  joint_positions  joint_velocities
experiments/without friction compensation/: README.md
franka_communication_interface/: gripper_control.cpp  torque_control.cpp
franka_interface/: README.md
franka_interface/utils/: grasp_rod.cpp  time_measure.cpp  zero_torque.cpp
motor_interface/motor_messages/: motor_state.lcm
src/: command.lcm  controller.py  controller_class.py  controller_with_global.py  grasp_rod.cpp  gripper_command.lcm  gripper_control.cpp  gripper_state.lcm  motion_with_control.cpp  motor_controller.py  output  position_control.cpp  robot_command.lcm  robot_state.lcm  state.lcm  test.py  test_gripper.cpp  torque_control  torque_control.cpp  torque_control_gripper.cpp  torque_position_control.cpp  zero_torque.cpp
src/exlcm/: __init__.py  command.hpp  command.py  gripper_command.hpp  gripper_command.py  gripper_state.hpp  gripper_state.py  robot_command.hpp  robot_command.py  robot_state.hpp  robot_state.py  state.hpp  state.py
src/extra_stuff/: communication_test.cpp  joint_impedance_control.cpp  motion.cpp  output_moved  output_notmoved  plot_data.py  robot_mock.py  send_command.py
src/frankalcm/: __init__.py  robot_command.hpp  robot_command.py  robot_state.py
src/motor_driver/: motor_controller.py
src/motor_messages/: motor_state.lcm
src/motor_messages/motorlcm/: __init__.py  (+1 more)
src/robot_messages/: gripper_command.lcm  gripper_state.lcm  robot_command.lcm  robot_state.lcm
src/tests/: grasp_rod.cpp
src/time_matching/: controller.py  interpolation.py  listener.py  tm_controller.py  tm_franka.cpp  tm_motor_controller.py  tm_read_data.cpp  tm_vel_control.cpp  vel_control.cpp
src/utils/: common_functions.cpp  echo_robot_state.cpp  forward_kinematics.py  generate_cartesian_pose_motion.cpp  generate_joint_velocity_motion.cpp  grasp_rod.cpp  time_matching.cpp  time_measure.cpp  transformation_matrix.py
time_matching/: README.md  controller.py  gripper_control.cpp  listener.py  main_gripper.py  main_motor.py  motor_controller.py  tm_controller.py  tm_motor_controller.py  torque_control.cpp  vel_control.cpp
time_matching/motor_messages/: motor_command.lcm
time_matching/robot_messages/: gripper_command.lcm  robot_command.lcm  robot_state.lcm
time_matching/utils/: cartesian_pose.cpp  common_functions.cpp  common_functions.h  echo_robot_state.cpp  grasp_rod.cpp  motor_friction.py  time_matching.cpp  time_measure.cpp  transformation_matrix.py
(+105 files in other folders)
